# xm2

./: README.md
mildoc_202601-main/: pyproject.toml
mildoc_202601-main/mildoc_admin/: admin_app.py
mildoc_202601-main/mildoc_index/: main.py  milvus_api.py  minio_event_handler.py  oss_event_handler.py  requirements.txt
mildoc_202601-main/mildoc_index/parser/: document_parser.py  mineru_parser.py  simple_object_parser.py
mildoc_202601-main/mildoc_milvus/: run_attu
mildoc_202601-main/mildoc_milvus/milvus_local/: docker-compose.yml
mildoc_202601-main/mildoc_milvus/milvus_minio/: docker-compose.yml
mildoc_202601-main/mildoc_wxkf/: config.py  cursor_manager.py  kf_message_handler.py  rag_service.py  rerank_service.py  run_mildoc_wxkf  wecom_api.py  wxkf_callback_app.py
