[project]
name = "mildoc"
version = "1.1.0"
description = "mildoc 是一个企业知识库管理系统。"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "alibabacloud-oss-v2==1.2.1",
    "aliyun-mns-sdk==1.3.0",
    "av==16.0.1",
    "flask==3.1.2",
    "flask-login==0.6.3",
    "gunicorn==23.0.0",
    "langchain==1.1.3",
    "langchain-community==0.4.1",
    "langchain-core==1.2.0",
    "langchain-milvus==0.3.1",
    "langchain-openai==1.1.3",
    "langchain-text-splitters==1.1.0",
    "langfuse==3.12.0",
    "markitdown[docx,pdf,pptx,xls,xlsx]==0.1.4",
    # "mineru[core]==2.7.0",
    "minio==7.2.20",
    "openai==2.11.0",
    "pycryptodome==3.23.0",
    "pymilvus==2.6.5",
    "pypdf2==3.0.1",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
    "requests==2.32.5",
]


[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
